# tonic-mock

./: .clippy.toml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  cliff.toml  deny.toml
.cursor/memory/: activeContext.md  apiExpansionPlan.md  complexityLevel.md  documentationPlan.md  implementationPlan.md  plan.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  tasks.md  techContext.md
.cursor/rules/: cleancode.mdc  codequality.mdc  dioxus.mdc  environment.mdc  react.mdc  rust.mdc  tailwind.mdc  typescript.mdc
.cursor/rules/isolation_rules/Level4/: archive-comprehensive.mdc
.github/workflows/: ci.yml
bench/: common.rs  stream_bench.rs
docs/: README.md  tutorial.md
examples/: bidirectional_streaming_test_api.rs  bidirectional_test_example.rs  grpc_mock_example.rs  grpc_test_demo.rs  mockable_client_example.rs  simple_mock_example.rs
specs/: instructions.md
src/: client_mock.rs  grpc_mock.rs  lib.rs  mock.rs  test_utils.rs
tests/: lib.rs
tests/common/: mod.rs  test_utils.rs
tests/common/proto/: mod.rs  test.proto
tests/integration/: bidirectional_test.rs  sample_service.rs
tests/unit/: bidirectional_tests.rs  client_mock_tests.rs  grpc_mock_tests.rs  mock_tests.rs  request_tests.rs  response_tests.rs  test_utils_tests.rs
