[package]
name = "tonic-mock"
version = "0.4.0"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/tonic-mock"
repository = "https://github.com/tyrchen/tonic-mock"
homepage = "https://github.com/tyrchen/tonic-mock"
description = """
Test utilities for easy mocking tonic streaming interface
"""
readme = "README.md"
categories = ["development-tools"]
keywords = ["tonic", "testing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
futures = "0.3"
http-body = "1.0"
http = "1.0"
prost = "0.13"
tonic = "0.12"

[dev-dependencies]
async-stream = "0.3"
tokio = { version = "1", features = ["rt-multi-thread"] }
